Kubernetes/ingress/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fruits-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: test.com  
    http:
      paths:
      - path: /orange
        pathType: Prefix
        backend:
          service:
            name: orange-service
            port:
              number: 5678
      - path: /apple
        pathType: Prefix
        backend:
          service:
            name: apple-service
            port:
              number: 8090
      - path: /fe
        pathType: Prefix
        backend:
          service:
            name: fe-svc
            port: 
               number: 8011
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: home-svc
            port: 
              number: 8010
